# 3d_reconstruction_poc

./: .gitignore  .gitmodules  README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/: AndroidManifest.xml
app/src/androidTest/java/com/local/a3d_reconstruction_poc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/local/a3d_reconstruction_poc/: MainActivity.java  Reconstructor.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/local/a3d_reconstruction_poc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
